[gd_scene load_steps=14 format=3 uid="uid://b3ywvgurbetiy"]

[ext_resource type="Script" path="res://FirstPersonFlyer.gd" id="1_0cyb0"]
[ext_resource type="Texture2D" uid="uid://bshkbofr21m3w" path="res://Crosshair.png" id="2_252at"]
[ext_resource type="Script" path="res://Crosshair.gd" id="3_dckbd"]

[sub_resource type="CapsuleShape3D" id="1"]
radius = 0.6

[sub_resource type="ConvexPolygonShape3D" id="2"]
points = PackedVector3Array(0, 2, 0.05, 0.0353553, 2, 0.0353553, 0.05, 2, 3.06162e-18, 0.0353553, 2, -0.0353553, 6.12323e-18, 2, -0.05, -0.0353553, 2, -0.0353553, -0.05, 2, -9.18485e-18, -0.0353553, 2, 0.0353553, -1.22465e-17, 2, 0.05, 0, 0, 0.05, 0.0353553, 0, 0.0353553, 0.05, 0, 3.06162e-18, 0.0353553, 0, -0.0353553, 6.12323e-18, 0, -0.05, -0.0353553, 0, -0.0353553, -0.05, 0, -9.18485e-18, -0.0353553, 0, 0.0353553, -1.22465e-17, 0, 0.05, 0, -2, 0.05, 0.0353553, -2, 0.0353553, 0.05, -2, 3.06162e-18, 0.0353553, -2, -0.0353553, 6.12323e-18, -2, -0.05, -0.0353553, -2, -0.0353553, -0.05, -2, -9.18485e-18, -0.0353553, -2, 0.0353553, -1.22465e-17, -2, 0.05, 0, 2, 0, 0, 2, 0.05, 0.0353553, 2, 0.0353553, 0.05, 2, 3.06162e-18, 0.0353553, 2, -0.0353553, 6.12323e-18, 2, -0.05, -0.0353553, 2, -0.0353553, -0.05, 2, -9.18485e-18, -0.0353553, 2, 0.0353553, -1.22465e-17, 2, 0.05, 0, -2, 0, 0, -2, 0.05, 0.0353553, -2, 0.0353553, 0.05, -2, 3.06162e-18, 0.0353553, -2, -0.0353553, 6.12323e-18, -2, -0.05, -0.0353553, -2, -0.0353553, -0.05, -2, -9.18485e-18, -0.0353553, -2, 0.0353553, -1.22465e-17, -2, 0.05)

[sub_resource type="StandardMaterial3D" id="3"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="CylinderMesh" id="4"]
material = SubResource("3")
top_radius = 0.05
bottom_radius = 0.05
height = 4.0
radial_segments = 8
rings = 1

[sub_resource type="SphereMesh" id="5"]

[sub_resource type="StandardMaterial3D" id="7"]
render_priority = 1
transparency = 1
albedo_color = Color(0.0627451, 0.894118, 0.0666667, 0.505882)

[sub_resource type="CylinderMesh" id="8"]
material = SubResource("7")
top_radius = 0.05
bottom_radius = 0.05
radial_segments = 8
rings = 1

[sub_resource type="StandardMaterial3D" id="9"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="BoxMesh" id="10"]
material = SubResource("9")
size = Vector3(5, 0.2, 5)

[sub_resource type="ConvexPolygonShape3D" id="11"]
points = PackedVector3Array(-2.5, 0.1, 2.5, 2.5, 0.1, -2.5, 2.5, 0.1, 2.5, -2.5, 0.1, -2.5, -2.5, -0.1, 2.5, 2.5, -0.1, -2.5, 2.5, -0.1, 2.5, -2.5, -0.1, -2.5, 2.5, 0.1, 2.5, -2.5, 0.1, -2.5, 2.5, 0.1, -2.5, -2.5, 0.1, 2.5, 2.5, -0.1, 2.5, -2.5, -0.1, -2.5, 2.5, -0.1, -2.5, -2.5, -0.1, 2.5, 2.5, 0.1, 2.5, -2.5, -0.1, 2.5, -2.5, 0.1, 2.5, 2.5, -0.1, 2.5, 2.5, 0.1, -2.5, -2.5, -0.1, -2.5, -2.5, 0.1, -2.5, 2.5, -0.1, -2.5)

[node name="FirstPersonFlyer" type="CharacterBody3D"]
script = ExtResource("1_0cyb0")

[node name="Capsule" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
shape = SubResource("1")

[node name="Head" type="Node3D" parent="."]

[node name="FirstPersonCamera" type="Camera3D" parent="Head"]
current = true
fov = 42.0
near = 0.01
far = 5000.0

[node name="OmniLight" type="OmniLight3D" parent="."]
visible = false
light_energy = 1.67
omni_range = 25.0

[node name="ManipulatorCollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, -1.5, -3.5)
visible = false
shape = SubResource("2")

[node name="ManipulatorMeshes" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.5, 0)
visible = false

[node name="ManipulatorMesh" type="MeshInstance3D" parent="ManipulatorMeshes"]
transform = Transform3D(1, -2.98023e-08, 0, 0, -1.62921e-07, -1, 2.98023e-08, 1, -1.62921e-07, 1.19209e-06, 0, -3.5)
mesh = SubResource("4")

[node name="ManipulatorTip" type="MeshInstance3D" parent="ManipulatorMeshes"]
transform = Transform3D(1, 0, -2.98023e-08, 0, 1, 0, 2.98023e-08, 0, 1, 9.53674e-07, 0, -5.5)
mesh = SubResource("5")

[node name="ManipulatorExtension" type="MeshInstance3D" parent="ManipulatorMeshes"]
transform = Transform3D(1, -2.98023e-08, 0, 0, -1.62921e-07, -1, 2.98023e-08, 1, -1.62921e-07, 0, 0, -6.5)
mesh = SubResource("8")

[node name="RMBManipulatorMeshes" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.5, 0)
visible = false

[node name="Plate" type="MeshInstance3D" parent="RMBManipulatorMeshes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -3.37924, -10.7638)
mesh = SubResource("10")

[node name="RMBManipulatorCollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -4.9, -10.764)
visible = false
shape = SubResource("11")

[node name="Crosshair" type="Sprite2D" parent="."]
position = Vector2(500, 300)
texture = ExtResource("2_252at")
script = ExtResource("3_dckbd")
